# Chess-CPP

./: Bishop.cpp  Bishop.h  Board.cpp  Board.h  Bot.cpp  Bot.h  CMakeLists.txt  Game.cpp  Game.h  Human.cpp  Human.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Player.cpp  Player.h  Position.cpp  Position.h  Queen.cpp  Queen.h  README.md  Rook.cpp  Rook.h  main.cpp
